<resources>
    <string name="app_name">IRG CRM</string>

    <string name="dummy">Dummy</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_connection">No Connection</string>

    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="submit">Submit</string>
    <string name="subject">Subject</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="user_id">User ID</string>
    <string name="email_id">Email ID</string>
    <string name="h_no_flat">House No</string>
    <string name="locality">Locality</string>
    <string name="landmark">Landmark</string>
    <string name="m_city">City</string>
    <string name="m_state">State</string>
    <string name="m_pincode">Pincode</string>
    <string name="update_profile">Update Profile</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="hint_enter_mobile_no">Mobile No</string>
    <string name="hint_enter_alter_mobile_no">Alternative Mobile no</string>
    <string name="your_email_id">Email ID</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="locality_area_or_street">Locality</string>
    <string name="flat_no_building_name">Flat no or Building no</string>
    <string name="submit_request">Submit</string>
    <string name="enter_member_id">Enter User ID</string>
    <string name="shop_name">Shop Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="Landline">Landline No.</string>
    <string name="floor_no">Floor No</string>
    <string name="shop_no">Shop No</string>
    <string name="district">District</string>
    <string name="house_no">House No</string>
    <string name="shop_address">Shop Address</string>
    <string name="basic_information">Basic Information</string>
    <string name="welcome">Welcome</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="totalamt">Total Amt.</string>
    <string name="ok">OK</string>
    <string name="pcs">PCS.</string>
    <string name="cancel">Cancel</string>
    <string name="contact_person">Contact Person</string>
    <string name="place_order">Place Order</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="title_activity_dasboard_new">DasboardActivityNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="old_password">Old Password</string>


    <string-array name="states_list">
	<item>Madhya Pradesh</item>
        /*<item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item> */
    </string-array>
</resources>
