<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBack"
    android:orientation="vertical"
    tools:context=".activities.ForgetPassActivity">

    <LinearLayout style="@style/form_layout">


          <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            style="@style/titleStyle"
            android:layout_marginTop="@dimen/margin_50"
            android:text="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextLabelStyle"
            app:hintTextAppearance="@style/TextHintSize"
            android:layout_marginTop="@dimen/margin_40">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMembetId"
                style="@style/editTextStyle_1"
                android:hint="@string/enter_email_id"
                android:inputType="textAutoComplete" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/androidx.appcompat.widget.AppCompatButtonStyle"
            android:id="@+id/btnSubmit"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>
